# crm-backend

./: .env.dev  .env.example  Dockerfile  Dockerfile.dev  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
