[tool.poetry]
name = "crm-backend"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [
    { include = "crm_backend" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.28.0"
uvicorn = "^0.23.2"
aiogram = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
